[gd_scene load_steps=61 format=3 uid="uid://72vo2ogn2dkf"]

[ext_resource type="Script" uid="uid://byi7sore2bfx" path="res://Scripts/players/knight.gd" id="1_fow7u"]
[ext_resource type="Texture2D" uid="uid://dqixo2t44hqwv" path="res://Assets/Players/Knight/Attack 1.png" id="1_fq5p1"]
[ext_resource type="Texture2D" uid="uid://heklh2j0jvyo" path="res://Assets/Players/Knight/Idle.png" id="2_2heuy"]
[ext_resource type="Texture2D" uid="uid://dlb8vdi0ptian" path="res://Assets/Players/Knight/Attack 2.png" id="3_2heuy"]
[ext_resource type="Texture2D" uid="uid://bcky4igu5rfbj" path="res://Assets/Players/Knight/Run.png" id="3_2uxei"]
[ext_resource type="Texture2D" uid="uid://c8sx5inn0qoq4" path="res://Assets/Players/Knight/Attack 3.png" id="4_2uxei"]
[ext_resource type="Texture2D" uid="uid://ctn1wmpn60k4c" path="res://Assets/Players/Knight/Protect.png" id="5_fon86"]
[ext_resource type="Texture2D" uid="uid://dhswgcgk47omo" path="res://Assets/Players/Knight/Dead.png" id="6_acorr"]
[ext_resource type="Texture2D" uid="uid://oevnkuqrnwpj" path="res://Assets/Players/Knight/Hurt.png" id="7_coaim"]
[ext_resource type="Texture2D" uid="uid://cguvuxapi5nxk" path="res://Assets/Players/Knight/Jump.png" id="9_uvq1b"]
[ext_resource type="Texture2D" uid="uid://dshmopyjhrv1a" path="res://Assets/Players/Knight/Walk.png" id="11_h66ra"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qsgkq"]
atlas = ExtResource("1_fq5p1")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jt60"]
atlas = ExtResource("1_fq5p1")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yemei"]
atlas = ExtResource("1_fq5p1")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohym6"]
atlas = ExtResource("1_fq5p1")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nndki"]
atlas = ExtResource("1_fq5p1")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_43lg6"]
atlas = ExtResource("3_2heuy")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1kvx"]
atlas = ExtResource("3_2heuy")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqid"]
atlas = ExtResource("3_2heuy")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fu3j"]
atlas = ExtResource("3_2heuy")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3s75a"]
atlas = ExtResource("4_2uxei")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2v0q"]
atlas = ExtResource("4_2uxei")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckg4q"]
atlas = ExtResource("4_2uxei")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve172"]
atlas = ExtResource("4_2uxei")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw6km"]
atlas = ExtResource("5_fon86")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_air2c"]
atlas = ExtResource("6_acorr")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_txmj2"]
atlas = ExtResource("6_acorr")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cyyo"]
atlas = ExtResource("6_acorr")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_12lcv"]
atlas = ExtResource("6_acorr")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh7bh"]
atlas = ExtResource("6_acorr")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwcjb"]
atlas = ExtResource("6_acorr")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq4cg"]
atlas = ExtResource("7_coaim")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3sa15"]
atlas = ExtResource("7_coaim")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p03my"]
atlas = ExtResource("2_2heuy")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lk1s"]
atlas = ExtResource("2_2heuy")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq5p1"]
atlas = ExtResource("2_2heuy")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2heuy"]
atlas = ExtResource("2_2heuy")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdn77"]
atlas = ExtResource("9_uvq1b")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cf4mr"]
atlas = ExtResource("9_uvq1b")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_85l2d"]
atlas = ExtResource("9_uvq1b")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yn5e"]
atlas = ExtResource("9_uvq1b")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7s8a"]
atlas = ExtResource("9_uvq1b")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2jlm"]
atlas = ExtResource("9_uvq1b")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6615t"]
atlas = ExtResource("3_2uxei")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0las"]
atlas = ExtResource("3_2uxei")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h15xt"]
atlas = ExtResource("3_2uxei")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6suxk"]
atlas = ExtResource("3_2uxei")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5cth"]
atlas = ExtResource("3_2uxei")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s5q8"]
atlas = ExtResource("3_2uxei")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cc1e7"]
atlas = ExtResource("3_2uxei")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht86q"]
atlas = ExtResource("11_h66ra")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6hfu"]
atlas = ExtResource("11_h66ra")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_55wio"]
atlas = ExtResource("11_h66ra")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjbjt"]
atlas = ExtResource("11_h66ra")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d3kf"]
atlas = ExtResource("11_h66ra")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mt51"]
atlas = ExtResource("11_h66ra")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsdci"]
atlas = ExtResource("11_h66ra")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5hkf"]
atlas = ExtResource("11_h66ra")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_12lcv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsgkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jt60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yemei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohym6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nndki")
}],
"loop": false,
"name": &"attack_1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_43lg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1kvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fu3j")
}],
"loop": false,
"name": &"attack_2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3s75a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2v0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckg4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve172")
}],
"loop": false,
"name": &"attack_3",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw6km")
}],
"loop": true,
"name": &"defend",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_air2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txmj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cyyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12lcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh7bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwcjb")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq4cg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3sa15")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p03my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lk1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq5p1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2heuy")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdn77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf4mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85l2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yn5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7s8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2jlm")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6615t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0las")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h15xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6suxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5cth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s5q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cc1e7")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht86q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6hfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55wio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjbjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d3kf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mt51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsdci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5hkf")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_siapn"]
height = 62.0

[node name="Knight" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_fow7u")
SPD = 200.0
HP = 200
ATK = 20

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_12lcv")
animation = &"idle"

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, 1)
shape = SubResource("CapsuleShape2D_siapn")

[node name="Attack_1_Zone" type="Area2D" parent="."]
visible = false
collision_mask = 2
monitoring = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Attack_1_Zone"]
polygon = PackedVector2Array(0, 0, 56, 25, 65, 10, 68, -6, 65, -22, 50, -43)

[node name="Attack_2_Zone" type="Area2D" parent="."]
visible = false
collision_mask = 2
monitoring = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Attack_2_Zone"]
polygon = PackedVector2Array(0, 0, 35, -40, 48, -36, 61, -25, 62, -14, 58, 2, 41, 18, 30, 21)

[node name="Attack_3_Zone" type="Area2D" parent="."]
visible = false
collision_mask = 2
monitoring = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Attack_3_Zone"]
polygon = PackedVector2Array(0, 0, 33, -8, 61, -11, 67, 1, 60, 13, 33, 11)
